kubernetes/argocd_cluster02/config/anderson-portifolio/portfolio-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
